<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/login_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_arrow_back" />
    <FrameLayout
        android:id="@+id/login_help"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="Help"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_help" />

    </FrameLayout>

    <TextView
        android:id="@+id/enteryourdetails_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/varela_round"
        android:text="Enter your Details"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_container_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enteryourdetails_signin"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_Email_login"
            android:layout_width="match_parent"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_container_email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="Password"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:fontFamily="@font/varela_round"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/bycontinuing_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_password_login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/varela_round"
        android:text="New User? Please Sign in"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bycontinuing_signin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:textColor="@color/black"
        tools:targetApi="m" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_continue"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#747473"
        android:fontFamily="@font/varela_round"
        android:text="Continue"
        android:textStyle="bold" />
</RelativeLayout>