<resources>
    <string name="app_name">SKIDOC</string>
    <string name="welcome">Welcome</string>
    <string-array name="BloodGroup">
        <item>o+</item>
        <item>o-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string-array name="SkinDiseaseconfirm">
        <item>Acne</item>
        <item>Actinic Prurigo</item>
        <item>Alopecia Areata</item>
        <item>Angioedema</item>
        <item>Argyria</item>
        <item>Atopic Dermatitis</item>
        <item>Bullous</item>
        <item>Chromhidrosis</item>
        <item>Chronic Hives</item>
        <item>Contact Dermatitis</item>
        <item>Eczema</item>
        <item>Epidermolysis Bullosa</item>
        <item>Harlequin Ichthyosis</item>
        <item>Lamellar Ichthyosis</item>
        <item>Nail Fungus</item>
        <item>Necrobiosis Lipoidica</item>
        <item>Psoriasis</item>
        <item>Raynauds</item>
        <item>Rosacea</item>
        <item>Skin Cancer</item>
        <item>Urticaria Hives</item>
        <item>Vascular Tumor</item>
        <item>Vitiligo</item>
    </string-array>

    <string-array name="SkinDisease">
        <item>No</item>
        <item>Acne</item>
        <item>Alopecia Areata</item>
        <item>Eczema</item>
        <item>Proriasis</item>
        <item>Raynaud</item>
        <item>Rosacea</item>
        <item>Vitiligo</item>
        <item>Chronic Hives</item>
        <item>Contact dermatitis</item>
    </string-array>

</resources>