...
        android:layout_marginHorizontal="20dp"
        android:hint="Email"
        android:clickable="true"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittextstarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

...
